--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>LovePhysics - IPHYS</title>
+<title>IPHYS</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -153,7 +153,7 @@ window.Quarto = {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">LovePhysics</span>
+    <span class="navbar-title">IPHYS</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -219,7 +219,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="GGB" data-listing-date-sort="1715875200000" data-listing-file-modified-sort="1715882956394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="139">
+<div class="quarto-post image-right" data-index="0" data-categories="GGB" data-listing-date-sort="1715875200000" data-listing-file-modified-sort="1715883506507" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="139">
 <div class="thumbnail">
 <p><a href="./post/例谈GGB创作技巧.html" class="no-external"></a></p><a href="./post/例谈GGB创作技巧.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
