--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="GGB">GGB <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="GGB">GGB <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -219,7 +219,29 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="GGB" data-listing-date-sort="1715875200000" data-listing-file-modified-sort="1715883506507" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="139">
+<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1715905231896" data-listing-reading-time-sort="2" data-listing-word-count-sort="274">
+<div class="thumbnail">
+<p><a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external"></a></p><a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external">
+<div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
+</a><p><a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external">时间控制模块</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external"></a>
+</div>
+<div class="listing-description">
+<a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external"></a>
+</div>
+</div>
+<div class="metadata">
+<p><a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external"></a></p><a href="./post/GGB数值模拟粒子在复合场中的运动.html" class="no-external">
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="GGB" data-listing-date-sort="1715875200000" data-listing-file-modified-sort="1715905379351" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="163">
 <div class="thumbnail">
 <p><a href="./post/例谈GGB创作技巧.html" class="no-external"></a></p><a href="./post/例谈GGB创作技巧.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -238,7 +260,7 @@ GGB
 </div>
 </div>
 <div class="listing-description">
-<a href="./post/例谈GGB创作技巧.html" class="no-external">添加布尔变量 <code>isStart=false</code>，用于控制计时的开始或暂停</a>
+<a href="./post/例谈GGB创作技巧.html" class="no-external">添加布尔变量 isStart，用于控制计时的开始或暂停</a>
 </div>
 </div>
 <div class="metadata">
